--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/48c6529706.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/48c6529706.js" crossorigin="anonymous"></script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
